Update Fabric abstract

--- a/cambridge/fabric/index.html
+++ b/cambridge/fabric/index.html
@@ -22,15 +22,15 @@
         Subtyping is a classical programming language feature, usually associated with <i>nominal</i> subtyping in
         object-oriented programming. <b>Structural subtyping</b> — where the subtyping relation is derived from the
         shared structure of types — is an alternative. Various structural typing approaches have seen interest, but
-        these are often incomplete without subtyping, which ends up omitted because of its complexity. <br>
+        these are often incomplete without subtyping, which ends up omitted because of its inherent complexity. <br>
 
         I argue that with the introduction of <b>algebraic subtyping</b> — a new framework for ML-style type
         inference — the time has come to revisit structural subtyping. In my thesis I propose a novel language
-        design, <b>Fabric</b>, and demonstrate the relevance of structural subtyping to modern design problems. As
-        part of the project, I propose a new approach to typing array programs, show how to capture record extension
-        within algebraic subtyping, and compile Fabric into WebAssembly with a focus on efficient core data
-        structures. I aim to show structural subtyping could narrow the expressive gap between static and dynamic
-        languages, and its ideas can improve how we use both.
+        design, <b>Fabric</b>, and demonstrate the relevance of structural subtyping to modern design problems. I
+        propose a new approach to typing array programs, show how to capture record extension within algebraic
+        subtyping without row polymorphism, and compile Fabric into WebAssembly with a focus on efficient core data
+        structures. Through my work I aim to show structural subtyping could narrow the expressive gap between static
+        and dynamic languages, and its ideas can improve how we use both.
     </p>
     </div>
 
