--- a/cambridge/fabric/index.html
+++ b/cambridge/fabric/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fabric</title>
 
-    <meta name="description" content="Fabric - structural subtyping in the modern age.">
+    <meta name="description" content="Structural subtyping in the modern age">
     <link rel="stylesheet" href="https://latex.vercel.app/style.css">
     <link rel="stylesheet" href="https://latex.vercel.app/prism/prism.css">
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -33,8 +33,9 @@
         design, <b>Fabric</b>, and demonstrate the relevance of structural subtyping to modern design problems. I
         propose a new approach to typing array programs, show how to capture record extension within algebraic
         subtyping without row polymorphism, and compile Fabric into WebAssembly with a focus on efficient core data
-        structures. I aim to show structural subtyping could narrow the expressive gap between static and dynamic
-        languages, and its ideas can improve how we use both.
+        structures. I aim to show structural subtyping narrows the expressive gap between static and dynamic
+        languages, it helps us statically type check dynamic programs, and its ideas can improve how we program
+        generally.
     </p>
     </div>
 
